[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creb"
version = "0.1.0"
description = "Consistent Reference External Batch harmonization for neuroimaging data"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["neuroimaging", "harmonization", "empirical-bayes", "fmri", "batch-effects"]
authors = [
    {name = "Helmet Karim", email = "hek26@pitt.edu"},
    {name = "Yiyan Pan", email = "yip33@pitt.edu"},
    {name = "Ameya Kharade", email = "apkharade10@gmail.com"}
]

dependencies = [
    "matplotlib>=3.7.5",
    "neurocombat>=0.2.12",
    "neuroharmonize>=2.4.5",
    "nibabel>=5.2.1",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyarrow>=5.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["creb*"]
